tests-ast-compare/fixtures/babel/packages/babel-parser/test/fixtures/esprima/invalid-syntax/migrated_0221/input.js
function hello() { "octal directive\1"; "use strict"; }
